welcome.lessons.welcome.array.array123.Array123.scala.error
array123:2: error: unclosed string literal
  "if (nums(nums.length-1) == 3) {
  ^array123:7: error: unclosed string literal
  else {"
        ^array123:2: error: unclosed string literal
  "if (nums(nums.length-1) == 3) {
  ^array123:2: error: illegal start of statement
  "if (nums(nums.length-1) == 3) {
  ^array123:7: error: ';' expected but 'else' found.
  else {"
  ^array123:7: error: unclosed string literal
  else {"
        ^array123:30: error: Unmatched closing brace '}' ignored here
 }
 ^